test-data/negative/missing_end_keyword.aadl
-- ERROR: Missing 'end' keyword to close the package
package missing_end_keyword
public
    system s
    end s;
